# bookeando-python

./: .env.example  .gitignore  CRONTAB_GUIDE.md  EJECUTAR_SCRAPER.md  EXTRACCION_VIERNES_FIN_SEMANA.md  INSTRUCCIONES.md  README.md  booking_scraper.py  mypy.ini  pyproject.toml  pytest.ini  requirements-all.txt  requirements-dev.txt  requirements.txt  run_booking_scraper.sh
src/: __init__.py  main.py
src/application/: __init__.py  update_prices.py  url_builder.py  weekend_detector.py
src/config/: settings.py
src/domain/: __init__.py  exceptions.py  models.py  services.py
src/infrastructure/: __init__.py
src/infrastructure/database/: connection.py  repositories.py
src/infrastructure/logging/: setup.py
src/infrastructure/scraping/: __init__.py  booking_scraper.py  driver_factory.py
src/utils/: timezone.py
tests/integration/: test_repositories.py  test_scraping_flow.py
tests/unit/: test_price_cleaning.py  test_text_extraction.py  test_weekend_detection.py
